--- a/backend/package.json
+++ b/backend/package.json
@@ -73,7 +73,8 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "start": "node ./src/main.js"
+    "start": "node ./src/main.js",
+    "dev": "nodemon ./src/main.js"
   },
   "keywords": [],
   "author": "",
